--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
     
     <!-- Modules -->
     <modules>
-        <module>contract</module>
         <module>provider</module>
     </modules>
     
@@ -60,8 +59,7 @@
         <junit.jupiter.version>5.5.2</junit.jupiter.version>
         <junit.platform.provider.version>1.5.2</junit.platform.provider.version>
         <mockito.version>3.0.0</mockito.version>
-        <archunit.version>0.11.0</archunit.version>
-        <speedment.version>${project.version}</speedment.version>
+        <jpa-streamer.version>${project.version}</jpa-streamer.version>
         <common.version>${project.version}</common.version>
 
         <!-- later maven-javadoc-plugin versions does not support aggregate? -->
@@ -90,7 +88,6 @@
             <id>Minborg</id>
             <name>Per Minborg</name>
             <url>https://github.com/minborg</url>
-            <email>minborg@speedment.com</email>
             <timezone>America/Los_Angeles</timezone>
         </developer>
         <developer>
@@ -946,27 +943,6 @@
                 <groupId>org.junit.platform</groupId>
                 <artifactId>junit-platform-launcher</artifactId>
                 <version>${junit.platform.provider.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.tngtech.archunit</groupId>
-                <artifactId>archunit</artifactId>
-                <version>${archunit.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.tngtech.archunit</groupId>
-                <artifactId>archunit-junit5-api</artifactId>
-                <version>${archunit.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.tngtech.archunit</groupId>
-                <artifactId>archunit-junit5-engine</artifactId>
-                <version>${archunit.version}</version>
                 <scope>test</scope>
             </dependency>
 
