--- a/field/pom.xml
+++ b/field/pom.xml
@@ -23,6 +23,12 @@
     </description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.speedment.common</groupId>
             <artifactId>annotation</artifactId>
