--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>jpa-streamer-parent</artifactId>
-        <groupId>com.speedment</groupId>
+        <groupId>com.speedment.jpastreamer</groupId>
+        <artifactId>jpastreamer-parent</artifactId>
         <version>0.1.0</version>
     </parent>
 
