--- a/application/pom.xml
+++ b/application/pom.xml
@@ -21,6 +21,12 @@
     </description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+        </dependency>
+
 <!--
 
         <dependency>
