--- a/application/pom.xml
+++ b/application/pom.xml
@@ -23,6 +23,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>seviceloader</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
         </dependency>
