--- a/provider/application-standard/pom.xml
+++ b/provider/application-standard/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>application</artifactId>
-            <version>0.1.0</version>
+            <version>${jpa-streamer.version}</version>
         </dependency>
 
         <dependency>
