Add module AutoCloseStandard

--- a/pom.xml
+++ b/pom.xml
@@ -900,6 +900,18 @@
             </dependency>
 
             <dependency>
+                <groupId>com.speedment.jpastreamer</groupId>
+                <artifactId>autoclose</artifactId>
+                <version>${jpa-streamer.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.speedment.jpastreamer</groupId>
+                <artifactId>autoclose-standard</artifactId>
+                <version>${jpa-streamer.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>javax.persistence</groupId>
                 <artifactId>javax.persistence-api</artifactId>
                 <version>${jpa.version}</version>
