--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,11 @@
     
     <!-- Modules -->
     <modules>
+        <module>exception</module>
         <module>seviceloader</module>
         <module>field</module>
         <module>application</module>
+        <module>javanine</module>
         <module>autoclose</module>
         <module>provider</module>
         <module>demo</module>
