--- a/pom.xml
+++ b/pom.xml
@@ -879,6 +879,12 @@
 
             <dependency>
                 <groupId>com.speedment.jpastreamer</groupId>
+                <artifactId>exception</artifactId>
+                <version>${jpa-streamer.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.speedment.jpastreamer</groupId>
                 <artifactId>seviceloader</artifactId>
                 <version>${jpa-streamer.version}</version>
             </dependency>
