--- a/application/pom.xml
+++ b/application/pom.xml
@@ -24,7 +24,8 @@
 
         <dependency>
             <groupId>com.speedment.jpastreamer</groupId>
-            <artifactId>seviceloader</artifactId>
+            <artifactId>rootfactory</artifactId>
+<!--            <version>${jpa-streamer.version}</version>-->
         </dependency>
 
         <dependency>
