Add module standard-renderer

--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -19,6 +19,7 @@
         <module>autoclose-standard</module>
         <module>builder-standard</module>
         <module>pipeline-standard</module>
+        <module>renderer-standard</module>
     </modules>
 
 </project>
