pipeline-standard: Finish up IntermediateOperationFactory

--- a/provider/pipeline-standard/pom.xml
+++ b/provider/pipeline-standard/pom.xml
@@ -28,6 +28,13 @@
             <version>${jpa-streamer.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>javanine</artifactId>
+            <version>${jpa-streamer.version}</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
