builder-standard: Start building builder

--- a/provider/builder-standard/pom.xml
+++ b/provider/builder-standard/pom.xml
@@ -30,6 +30,18 @@
 
         <dependency>
             <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>pipeline</artifactId>
+            <version>${jpa-streamer.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>renderer</artifactId>
+            <version>${jpa-streamer.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>autoclose</artifactId>
             <version>${jpa-streamer.version}</version>
         </dependency>
