Add module fieldgenerator-standard

--- a/provider/builder-standard/pom.xml
+++ b/provider/builder-standard/pom.xml
@@ -24,6 +24,12 @@
 
         <dependency>
             <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>rootfactory</artifactId>
+            <version>${jpa-streamer.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>builder</artifactId>
             <version>${jpa-streamer.version}</version>
         </dependency>
