--- a/provider/fieldgenerator-standard/pom.xml
+++ b/provider/fieldgenerator-standard/pom.xml
@@ -7,21 +7,27 @@
         <artifactId>jpastreamer-parent</artifactId>
         <version>0.1.0</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>provider</artifactId>
-    <packaging>pom</packaging>
 
-    <name>Provider</name>
+    <artifactId>fieldgenerator-standard</artifactId>
 
-    <modules>
-        <module>application-standard</module>
-        <module>autoclose-standard</module>
-        <module>builder-standard</module>
-        <module>pipeline-standard</module>
-        <module>renderer-standard</module>
-        <module>preoptimizer-standard</module>
-        <module>fieldgenerator-standard</module>
-    </modules>
+    <properties>
+        <module-name>jpastreamer.fieldgenerator.standard</module-name>
+    </properties>
+
+    <name>FieldGenerator - Standard</name>
+    <description>
+        Standard field generator
+    </description>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
