--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <junit.platform.provider.version>1.5.2</junit.platform.provider.version>
         <mockito.version>3.0.0</mockito.version>
         <jpa-streamer.version>${project.version}</jpa-streamer.version>
+        <speedment-version>3.2.9</speedment-version>
         <common.version>${project.version}</common.version>
 
         <!-- later maven-javadoc-plugin versions does not support aggregate? -->
