--- a/provider/fieldgenerator-standard/pom.xml
+++ b/provider/fieldgenerator-standard/pom.xml
@@ -40,6 +40,13 @@
         <dependency>
             <groupId>com.speedment.common</groupId>
             <artifactId>codegen</artifactId>
+            <version>${speedment.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.speedment.generator</groupId>
+            <artifactId>generator-standard</artifactId>
+            <version>${speedment.version}</version>
         </dependency>
 
         <dependency>
@@ -47,7 +54,6 @@
             <artifactId>auto-service-annotations</artifactId>
             <version>${auto-service.version}</version>
         </dependency>
-
 
     </dependencies>
 
