Add provider module for merger

--- a/pom.xml
+++ b/pom.xml
@@ -939,7 +939,6 @@
                 <version>${jpa-streamer.version}</version>
             </dependency>
 
-
             <dependency>
                 <groupId>com.speedment.jpastreamer</groupId>
                 <artifactId>pipeline</artifactId>
@@ -952,7 +951,6 @@
                 <version>${jpa-streamer.version}</version>
             </dependency>
 
-
             <dependency>
                 <groupId>com.speedment.jpastreamer</groupId>
                 <artifactId>renderer</artifactId>
@@ -962,6 +960,18 @@
             <dependency>
                 <groupId>com.speedment.jpastreamer</groupId>
                 <artifactId>renderer-standard</artifactId>
+                <version>${jpa-streamer.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.speedment.jpastreamer</groupId>
+                <artifactId>merger</artifactId>
+                <version>${jpa-streamer.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.speedment.jpastreamer</groupId>
+                <artifactId>merger-standard</artifactId>
                 <version>${jpa-streamer.version}</version>
             </dependency>
 
