--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -22,6 +22,7 @@
         <module>renderer-standard</module>
         <module>preoptimizer-standard</module>
         <module>fieldgenerator-standard</module>
+        <module>merger-standard</module>
         <module>fieldgenerator-standard-test</module>
     </modules>
 
