Add version info

--- a/provider/merger-standard/pom.xml
+++ b/provider/merger-standard/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>merger</artifactId>
+            <version>${jpa-streamer.version}</version>
         </dependency>
 
         <dependency>
