--- a/provider/fieldgenerator-standard-test/pom.xml
+++ b/provider/fieldgenerator-standard-test/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.speedment.jpastreamer</groupId>
-        <artifactId>jpastreamer-parent</artifactId>
+        <artifactId>provider</artifactId>
         <version>0.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -31,6 +31,16 @@
             <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>fieldgenerator-standard</artifactId>
             <version>${jpa-streamer.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>field</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>fieldgenerator-standard-component</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
