--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -24,6 +24,7 @@
         <module>fieldgenerator-standard</module>
         <module>merger-standard</module>
         <module>fieldgenerator-standard-test</module>
+        <module>fieldgenerator-standard-component</module>
     </modules>
 
 </project>
