Add support for skip/limit operation squashing

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -60,6 +60,11 @@
 
         <dependency>
             <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>preoptimizer-standard</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>field</artifactId>
         </dependency>
 
