--- a/provider/criteria-standard/pom.xml
+++ b/provider/criteria-standard/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>criteria</artifactId>
+            <version>${jpa-streamer.version}</version>
         </dependency>
 
         <dependency>
