Add preoptimizer tests

--- a/provider/preoptimizer-standard/pom.xml
+++ b/provider/preoptimizer-standard/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>rootfactory</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.speedment.jpastreamer</groupId>
+            <artifactId>pipeline-standard</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
