--- a/provider/criteria-standard/pom.xml
+++ b/provider/criteria-standard/pom.xml
@@ -31,6 +31,12 @@
             <groupId>com.speedment.jpastreamer</groupId>
             <artifactId>exception</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
