--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <module>criteria</module>
 
         <module>provider</module>
+        <module>fieldgenerator</module>
     </modules>
     
     <!-- Properties -->
@@ -77,7 +78,6 @@
         <common.version>${project.version}</common.version>
 
         <!-- later maven-javadoc-plugin versions does not support aggregate? -->
-        <speedment-version>3.2.6</speedment-version>
         <jpa.version>2.2</jpa.version>
         <maven-javadoc-plugin-version>3.1.1</maven-javadoc-plugin-version>
         <maven-source-plugin-version>3.2.0</maven-source-plugin-version>
